Updated the Porfolio page to use a grid

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,17 +30,17 @@
         <section class = "center-content container">
             <h2>Portfolio</h2>
             <div class = "horizontal-separator"></div>
-            <div class = "clearfix">
-                    <img class = "portfolio-image" src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img class = "portfolio-image" src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img class = "portfolio-image" src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img class = "portfolio-image" src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img class = "portfolio-image" src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img class = "portfolio-image" src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img class = "portfolio-image" src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img class = "portfolio-image" src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img class = "portfolio-image" src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img class = "portfolio-image" src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
+            <div class = "clearfix grid">
+                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
+                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
+                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
+                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
+                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
+                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
+                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
+                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
+                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
+                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
             </div>
             <br>
         </section>
