--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
         <section class = "center-content container">
             <h2>Portfolio</h2>
             <div class = "horizontal-separator"></div>
-            <div class = "clearfix grid">
+            <div class = "grid">
                     <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
                     <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
                     <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
