--- a/portfolio.html
+++ b/portfolio.html
@@ -27,24 +27,27 @@
                 </div>
             </header>
 
-        <section class = "center-content container">
+        <section class="center-content container">
             <h2>Portfolio</h2>
-            <div class = "horizontal-separator"></div>
-            <div class = "grid">
-                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
-                    <img src="assets/images/Profile.jpg" width="140" height="193" alt="Michael Daniels">
+            <div class="horizontal-separator"></div>
+            <div class="clearfix">
+                <div>
+                    <img class="portfolio-image" src="assets/images/Profile.jpg" alt="Michael Daniels">
+                    <div class="portfolio-image-label">Hello there</div>
+                </div>
+                <img class="portfolio-image" src="assets/images/Profile.jpg" alt="Michael Daniels">
+                <img class="portfolio-image" src="assets/images/Profile.jpg" alt="Michael Daniels">
+                <img class="portfolio-image" src="assets/images/Profile.jpg" alt="Michael Daniels">
+                <img class="portfolio-image" src="assets/images/Profile.jpg" alt="Michael Daniels">
+                <img class="portfolio-image" src="assets/images/Profile.jpg" alt="Michael Daniels">
+                <img class="portfolio-image" src="assets/images/Profile.jpg" alt="Michael Daniels">
+                <img class="portfolio-image" src="assets/images/Profile.jpg" alt="Michael Daniels">
+                <img class="portfolio-image" src="assets/images/Profile.jpg" alt="Michael Daniels">
+                <img class="portfolio-image" src="assets/images/Profile.jpg" alt="Michael Daniels">
             </div>
             <br>
         </section>
-
+        
         <footer>
             <div id="copyright">Copyright © 2018 Michael Daniels</div>
         </footer>
